--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Home of Xiaofeng"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://github.com/xiaofengliuGT # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://xiaofengliugt.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "xiaofengliuGT/xiaofengliuGT.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
