--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,21 @@
 # main links links
 main:
+#    - title: "Publications"
+#      url: /publications/
+
   - title: "Publications"
-    url: /publications/
-    
-    - title: "Research"
+    url: /publication1/
+
+  - title: "Research"
     url: /research/
 
   - title: "Talks"
-    url: /talks/    
+    url: /talks/   
+
 
   - title: "Teaching"
     url: /teaching/    
     
-#  - title: "Portfolio"
-#    url: /portfolio/
         
   - title: "Blog"
     url: /blog/
@@ -21,5 +23,9 @@ main:
   - title: "CV"
     url: /cv/
     
-#  - title: "Guide"
-#    url: /markdown/
+  - title: "Misc"
+    url: /misc/
+    
+    
+#   - title: "Guide"
+#     url: /markdown/
