--- a/_config.yml
+++ b/_config.yml
@@ -181,12 +181,13 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  research:
     output: true
     permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
+    
 
 
 # Defaults
@@ -230,7 +231,7 @@ defaults:
   # _portfolio
   - scope:
       path: ""
-      type: research 
+      type: research
     values:
       layout: single
       author_profile: true
